--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,5 +4,6 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  text-align: center;
+  padding-top: 20%;
+  font-family: monospace;
 }
