--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   align-content: center;
-  padding-top: 20%;
+  padding-top: 10%;
   font-family: monospace;
+  display: flex;
+  flex-direction: column;
 }
