--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,11 +1,12 @@
+
 .App {
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
-  align-content: center;
-  padding-top: 10%;
-  font-family: monospace;
+  /* align-content: center; */
+  padding-top: 20%;
+  font-family: 'Montserrat', 200;
   display: flex;
   flex-direction: column;
 }
